Removed li BG colour to fix add content panel bleed

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -74,11 +74,10 @@ ul, ol, li {
   line-height:@font-swatch5-line-height;
   color:@font-swatch5-color;
   letter-spacing: @font-swatch5-letter-spacing;
-  background-color: @color-swatch1;
 }
 
 ul {
-list-style-type: square;
+  list-style-type: square;
 }
 
 .bk-content-text ul, .bk-content-text ol {
